# clay

./: .gitignore  CMakeLists.txt  Cargo.toml  LICENSE  Makefile  README.md  USAGE.md  build_and_test.sh  build_dependencies.sh  build_deps.sh  chunk_demo_example.sh  clay.pc.in  clay_ec  demo_encoding.sh  run_examples.sh  test_runner.sh
benches/: clay_bench.rs
docs/: clay-codes-fast18.md  clay-practical-implementation.md  explorer.html
examples/: CMakeLists.txt  adv_demos.cpp  basic_clay_example.cpp  basic_example.cpp  chunk_demo.cpp  complete_example.cpp  debug_encoding.cpp  decode_test.cpp  demo.rs  lib_integration.cpp  simple_example.cpp
include/: BufferList.h  ErasureCode.h  ErasureCodeClay.h  ErasureCodeInterface.h  ErasureCodeJerasure.h  ErasureCodeProfile.h
include/clay/: Buffer.h  BufferList.h  ErasureCode.h  ErasureCodeClay.h  ErasureCodeInterface.h  ErasureCodeJerasure.h  ErasureCodeProfile.h  clay.h
src/: Buffer.cpp  BufferListAdapter.cpp  ClayCode.cpp  ClayParams.cpp  ErasureCode.cc  ErasureCode.cpp  ErasureCodeClay.cc  ErasureCodeClay.cpp  ErasureCodeJerasure.cc  ErasureCodeJerasure.cpp  coords.rs  decode.rs  encode.rs  error.rs  lib.rs  main.cpp  repair.rs  transforms.rs
tests/: api_test.cpp  decode_test.cpp  integration.rs  test_buffer.cpp  test_buffer_func.cpp
