[package]
name = "clay-codes"
version = "0.1.0"
edition = "2021"
description = "Clay (Coupled-Layer) erasure codes - MSR codes with optimal repair bandwidth"
license = "MIT"

[dependencies]
reed-solomon-erasure = { version = "6.0", features = ["simd-accel"] }

[dev-dependencies]
rand = "0.8"
criterion = "0.5"

[[bench]]
name = "clay_bench"
harness = false
